# aoc2021

./: .gitignore  CMakeLists.txt  README.md  summary.cpp
day0/: CMakeLists.txt  charmap.h  dijkstra.cpp  point.cpp  point.h  solution.cpp
day1/: CMakeLists.txt  README.md  solution.cpp
day10/: README.md  solution.cpp
day11/: README.md  charmap.h  solution.cpp
day12/: README.md  solution.cpp
day13/: CMakeLists.txt  README.md  charmap.cpp  charmap.h  solution.cpp
day14/: CMakeLists.txt  README.md  solution.cpp  split.h
day15/: CMakeLists.txt  README.md  charmap.cpp  charmap.h  dijkstra.cpp  dijkstra.h  point.cpp  solution.cpp  vector.cpp
day16/: CMakeLists.txt  README.md  bitstream.h  solution.cpp
day17/: README.md  solution.cpp  split.h
day18/: CMakeLists.txt  README.md  solution.cpp
day19/: CMakeLists.txt  README.md  overlaps.ods  point.h  solution.cpp
day2/: CMakeLists.txt  README.md  point.h  solution.cpp
day20/: CMakeLists.txt  charmap.cpp  charmap.h  solution.cpp
day21/: day21.py  solution.cpp
day22/: CMakeLists.txt  cube.cpp  cube.h  solution.cpp  vector.h
day23/: CMakeLists.txt  charmap.h  solution.cpp  split.h
day3/: README.md  solution.cpp
day4/: README.md  solution.cpp
day5/: README.md  solution.cpp
day6/: README.md  solution.cpp  split.h
day7/: README.md  solution.cpp
day8/: README.md  solution.cpp
day9/: CMakeLists.txt  README.md  point.cpp  solution.cpp
